syntax = "proto3";

option go_package = "github.com/elap5e/penguin/pkg/encoding/tlv/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: oicq.wlogin_sdk.p1290pb.DeviceReport
//
// DeviceReport is the message type for the DeviceReport.
message DeviceReport {
  bytes bootloader  = 1; // bytes_bootloader
  bytes version     = 2; // bytes_version
  bytes codename    = 3; // bytes_codename
  bytes incremental = 4; // bytes_incremental
  bytes fingerprint = 5; // bytes_fingerprint
  bytes boot_id     = 6; // bytes_boot_id
  bytes android_id  = 7; // bytes_android_id
  bytes baseband    = 8; // bytes_baseband
  bytes inner_ver   = 9; // bytes_inner_ver
}
